# test-turinga

./: .gitignore  Dockerfile  README.md  app.py  client.py  client_tk.py  download_llm.sh  gunicorn_config.py  main.py  pyproject.toml  runclient.ps1  runclient.sh  runserver.sh  server.py  server_ai.sh  setup.sh  socket_server.py  tests.py  thread.py
src/: ai.py
src/test_turinga/: __init__.py  ai.py  blueprint.py  chat_server.py  client_tk.py  correspondents.py  http_server.py  main.py  message.py  server.py  thread.py
src/test_turinga/correspondents/: __init__.py  ai.py  base.py  user.py
src/test_turinga/handlers/: __init__.py  ai_handler.py  base.py  user_handler.py
src/tests/: __init__.py  test_ai.py  test_llama.py  test_message.py  test_sending.py
static/: index.js
templates/: index.html
tests/: test_ai.py  test_sending.py
