[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_turinga"
version = "0.1.0"
description = "LLM Turing test multiplayer game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytest"]
authors = [
  { name = "TCA" },
  {name = "Dewaszmi", email = "maciej.zyczynski@protonmail.com"}
]

[project.urls]
url = "https://github.com/Kolo-Naukowe-AI-Star/test-turinga"

[project.optional-dependencies]
ai = ["llama-cpp-python", "langchain_community"]

[tool.setuptools.packages.find]
where = ["src"]
